--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,7 @@
 .App {
-  margin-left: 3em;
-  margin-right: 3em;
+  margin-left: 10em;
+  margin-right: 10em;
+}
+.container-margin {
+  margin-top: 3em;  
 }
